--- a/Libro.tex
+++ b/Libro.tex
@@ -3462,8 +3462,13 @@ Seppur l'impiego di carbone, petrolio e gas naturali per la produzione energetic
 Riassorbire le emissioni risulta essere una sfida complicata in quanto, ogni operazione, ha bisogno di energia, che spesso si traduce in inquinamento. Esistono realtà che si occupano di piantare alberi, che sono capaci di riassorbire la $CO_2$ senza consumare energia. Purtroppo però gli alberi non assorbono $CO_2$ all'infinito, ma principalmente mentre crescono e, tendono a stabilizzarsi quando diventano vecchi. In una foresta matura, la quantità di carbonio assorbita dalle piante giovani è spesso bilanciata da quella rilasciata dal legno che marcisce a terra. Abbattere una foresta esistente è un problema enorme, siccome libera immediatamente tutto il carbonio stoccato in anni e, i nuovi alberi, impiegherebbero decenni a riassorbire. Inoltre in molte parti del mondo, come in Italia e in Europa, le foreste stanno già crescendo da sole grazie all'abbandono delle zone montane e dei pascoli \endnote{\raggedright\url{https://www.youtube.com/watch?v=y6VRsoU7A9Y}}.
 
 Le strade percorribili per ridurre la $CO_2$ sono tantissime e quotidianamente nascono nuove idee e nuove soluzioni.
-Le fonti rinnovabili come l'eolico e solare, essendo per natura intermittenti e legate a condizioni meteo, presentano sfide di gestione elevate, per garantire l'equilibrio tra domanda e offerta. Un impianto sottostimato non fornirebbe energia sufficiente a tutti, mentre, se venisse generata corrente in esubero, sul lungo termine provocherebbe problemi all'impianto elettrico. Tra le alternative green, troviamo anche il nucleare. Quando pensiamo alle centrali nucleari, può venire in mente Chernobyl, radiazioni, morte e bombe.
-Osserviamo il seguente grafico.
+Le fonti rinnovabili come l'eolico e solare, essendo per natura intermittenti e legate a condizioni meteo, presentano sfide di gestione elevate, per garantire l'equilibrio tra domanda e offerta. Un impianto sottostimato non fornirebbe energia sufficiente a tutti, mentre, se venisse generata corrente in esubero, sul lungo termine provocherebbe problemi all'impianto elettrico. 
+
+Tecnicamente sarebbe possibile affidarsi solo a energie rinnovabili, ma rappresenterebbe una sfida di una complessità logistica ed economica tale, in realizione anche alla continua crescita di richiesta energetica dei paesi emergenti e non, che il nucleare viene visto da molti esperti e istituzioni, come la IEA, IPCC e ONU come l'unica scelta per facilitare la transizione, entro il 2050.
+
+Il 2050 è indicato come il termine ultimo per raggiungere il Net Zero. Se sarà superata la soglia di 1,5°C di riscaldamento, si innescheranno cambiamenti climatici irreversibili.
+
+Quando pensiamo al nucleare, può venire in mente Chernobyl, radiazioni, morte e bombe.
 
 \needspace{4cm}
 \begin{figure}[H]
@@ -3473,52 +3478,48 @@ Osserviamo il seguente grafico.
   \end{minipage}
 \end{figure}
 
+In questo grafico possiamo vedere sull'asse x i gas serra prodotti dalle varie fonti di energia e, sull'asse y, il numero di morti che ha provocato ogni terawattora. Vediamo come ci sia una correlazione tra inquinamento e morte. In testa il carbone, seguito da petrolio, gas naturali e biomasse. 
+Il nucleare ha ucciso meno persone rispetto al carbone (351 volte meno). Le moderne centrali nucleari incorporano tecnologie e protocolli di sicurezza,che rendono il rischio di incidente estremamente basso. 
+Le centrali nucleari producono scorie radioattive, ma se isolate correttamente non saranno disperse nell'ambiente. Da queste preoccupazioni nasce il progetto
+TerraPower\endnote{\raggedright\url{https://it.wikipedia.org/wiki/TerraPower}} di Bill Gates, che si impegna a risolvere questi due problemi. L'azienda sta sviluppando una nuova tipologia di reattore che utilizza uranio impoverito, un sottoprodotto abbondante delle attuali tecnologie nucleari, come combustibile, il che potrebbe permettere di riutilizzare materiali considerati scorie. 
 
 
 
 
 
 
-
-In questo grafico possiamo vedere sull'asse x i gas serra prodotti dalle varie fonti di energia e,
-sull'asse y, il numero di morti che ha provocato ogni terawattora. Vediamo come ci sia una
-correlazione tra inquinamento e morte. In testa il carbone, seguito da petrolio, gas naturali e biomasse. Possiamo
-notare come il nucleare abbia ucciso molte meno persone rispetto al carbone (351 volte meno). Se consideriamo che l'incidente di Chernobyl fu dovuto in gran parte a un reattore con un design intrinsecamente difettoso e a gravi errori operativi, e quello di Fukushima a un evento naturale di portata eccezionale che superò le misure di sicurezza, le moderne centrali nucleari incorporano tecnologie e protocolli di sicurezza avanzati che mirano a ridurre ulteriormente il rischio di incidenti e le potenziali conseguenze. Le centrali nucleari producono scorie radioattive,
-ma se isolate correttamente non saranno disperse nell'ambiente. Da queste preoccupazioni nasce il progetto
-TerraPower\endnote{\raggedright\url{https://it.wikipedia.org/wiki/TerraPower}} di Bill Gates, che si impegna a risolvere questi due
-problemi. L'azienda sta sviluppando una nuova tipologia di reattore chiamata traveling wave reactor (TWR). A differenza dei reattori nucleari tradizionali, che utilizzano uranio arricchito come combustibile e richiedono frequenti interventi umani, il TWR è progettato per funzionare per decenni con minimo intervento umano.
-Inoltre, il TWR utilizza uranio impoverito, un sottoprodotto abbondante delle attuali tecnologie nucleari, come combustibile, il che potrebbe permettere di riutilizzare materiali considerati scorie nei reattori convenzionali. Inoltre, come ha spiegato Solomon Goldstein-Rose in un
-Ted\endnote{\raggedright\url{https://www.ted.com/talks/solomon_goldstein_rose_how_much_clean_electricity_do_we_really_need}} non basterà convertire la produzione attuale di corrente da combustibile fossile a fonti rinnovabili, servirà
-produrne 12 volte tanto. Questo perché molti strumenti stanno diventando elettrici, nella mobilità e non sono, inoltre
-i paesi in via di sviluppo cresceranno, aumentando di conseguenza il loro fabbisogno energetico. In più avremo bisogno
-di nuove tecnologie, come quelle impiegate nella rimozione del carbonio prodotto negli anni e, anche questo necessiterà
-di energie. Per questi motivi, secondo diversi esperti, il nucleare sarà indispensabile e forse non sufficiente.
-
-Al contempo, altri ricerche sono contrarie a queste tecnologie in quanto, nel caso dell'Italia, già
-ad oggi, come visto nel precedente grafico, produce già il 40\% di elettricità da fonti
-rinnovabili\endnote{\raggedright\url{https://ourworldindata.org/grapher/share-electricity-renewables}}
-\endnote{\raggedright\url{https://www.terna.it/it/sistema-elettrico/statistiche/pubblicazioni-statistiche} } e, secondo Enel e The
-European House, il nostro paese potrà raggiungere la quasi completa decarbonizzazione entro il 2050 e senza bisogno di
-energia
-nucleare\endnote{\raggedright\url{https://www.ambrosetti.eu/news/net-zero-e-conomy-2050-roadmap-di-decarbonizzazione-per-leuropa/}}.
-La costruzione di centrali nucleari inoltre richiede molto tempo e denaro, ma sostenitori invece\endnote{\raggedright\url{https://www.ted.com/talks/isabelle_boemeke_nuclear_power_is_our_best_hope_to_ditch_fossil_fuels}} portano altri esempi, di come la Francia sia riuscita a costruire 45 reattori in 15 anni. O più di recente, Giappone, Cina e Corea hanno costruito reattori in 6 anni circa.
 
 \begin{mdframed}[linewidth=1pt]
-Uno studio pubblicato su Science Advances\endnote{\raggedright\url{https://www.science.org/doi/epdf/10.1126/sciadv.adh8263}} ha evidenziato che per combattere l’inquinamento indoor non basta semplicemente areare gli ambienti, poiché i composti organici volatili (VOC), che includono sostanze nocive come l’ammoniaca e il benzene, tendono a depositarsi sulle superfici e a rilasciarsi gradualmente nell’aria. La ricerca ha confrontato l’efficacia della ventilazione, sia naturale che con purificatori, con quella della pulizia manuale, scoprendo che attività come passare l’aspirapolvere, spolverare e lavare i pavimenti sono più efficaci nel rimuovere i VOC. Tuttavia, la ventilazione rimane superiore per quanto riguarda l’eliminazione delle polveri sottili, un altro importante fattore dell’inquinamento domestico.
+Uno studio pubblicato su Science Advances\endnote{\raggedright\url{https://www.science.org/doi/epdf/10.1126/sciadv.adh8263}} ha osservato che per combattere l’inquinamento nei luoghi chiusi, non basta semplicemente areare gli ambienti, poiché i composti organici volatili (VOC), tendono a depositarsi sulle superfici e a rilasciarsi gradualmente nell’aria. La ricerca ha confrontato l’efficacia della ventilazione, sia naturale che con purificatori, con quella della pulizia manuale, scoprendo che l’aspirapolvere, spolverare e lavare i pavimenti sono più efficaci nel rimuovere i VOC. Tuttavia, la ventilazione rimane superiore per quanto riguarda l’eliminazione delle polveri sottili, un altro importante fattore dell’inquinamento domestico.
 
-Attenzione alla lavatrice. Diverse delle micro plastiche presenti negli oceani arrivano dalle lavatrici. Lavaggi troppo caldi oltre a rovinare
-gli indumenti possono separare delle micro fibre dai nostri capi che verranno poi rilasciati
-nell'acqua. Una delle migliori scelte ecologiche è proprio impostare un ciclo di lavaggio breve e
-con temperature non superiori a 20 °C, utilizzando un additivo igienizzante se vogliamo sentirci più protetti dai
-batteri. Oltre all'ambiente questa scelta preserverà più a lungo forma e colore dei vostri capi,
-riducendo il rilascio di microfibre sintetiche nell'ambiente fino al 52\% oltre a un consumo inferiore di acqua ed
-elettricità. Questo è quello a cui sono arrivati i ricercatori dell'Università di Leeds
-(UK)\endnote{\raggedright\url{https://www.sciencedirect.com/science/article/abs/pii/S0143720819320431}}.
+Per la pulizia della casa meglio preferire detergenti ecologici anche per la salute. Per minimizzare ulteriormente l'inalazione accidentale di particelle, è consigliabile prediligere prodotti in formulazione liquida o in gel, rispetto ai formati spray che tendono a disperdere gli ingredienti nell'aria, arieggiano abbondantemente l'ambiente.
 
-Per la pulizia della casa meglio preferire detergenti ecologici anche per la salute. Per minimizzare ulteriormente l'inalazione accidentale di particelle, è consigliabile prediligere prodotti in formulazione liquida o in gel, rispetto ai formati spray che tendono a disperdere gli ingredienti nell'aria. Inoltre per tutelare la propria salute possiamo arieggiare abbondantemente. Mantenere le finestre aperte durante e dopo le pulizie assicura un costante ricambio d'aria, eliminando l'umidità in eccesso e disperdendo rapidamente eventuali residui volatili o fumi, garantendo così un ambiente pulito e, soprattutto, salubre.
+Circa le lavatrici, lavaggi troppo lunghi o caldi (superiori a 20 °C), oltre a rovinare gli indumenti possono separare delle micro fibre dai nostri capi che verranno poi rilasciate nell'acqua e negli oecani. Meglio ridurre durata e calore utilizzando un additivo igienizzante\endnote{\raggedright\url{https://www.sciencedirect.com/science/article/abs/pii/S0143720819320431}}.
 \end{mdframed}
 
+\clearpage
 \subsubsection{Alimentazione}
+
+In che modo l'alimentazione può impattare sull'ecosistema? L'atto in sé di mangiare non inquina, ma il modo in cui vengono prodotti gli alimenti potrebbe. Come possiamo osservare dal seguente grafico sull'impronta idrica, la carne, soprattutto quella di bovino, copre le prime posizioni. Gli animali possiamo vederli come dei sistemi, di solito più sono grossi e meno sono efficienti. Per allevare gli animali serve cibo che prendiamo dai campi. Immaginate quanti chili di cibo mangia una mucca prima di essere macellata e quanti litri d'acqua beve. La produzione di 1kg di carne di manzo necessita di circa 15500 litri. Ora immaginate di essere in una stanza e di avere da una parte una mucca macellata e, dall'altra tutto quello che il bovino ha mangiato e bevuto durante la sua vita.
+Se si dovesse scegliere tra consumare la carne della mucca o le risorse vegetali che essa ha assunto per crescere, per l'efficienza energetica quest'ultime potrebbero sostenere un maggior numero di individui.
+
+Quando una mucca mangia, convertirà una piccola parte di quel cibo in carne (3-5\%) e, il resto viene trasformato in peli, corna, ossa, zoccoli, sangue, gas, calore, movimento ecc…
+
+Se le colture che producono cibo per gli allevamenti venissero coltivate a soia, produrremmo il 314\%\endnote{\raggedright\url{https://humaneherald.org/wp-content/uploads/2019/05/calories-and-protein-produced-per-acre-1.pdf}} di proteine in più rispetto alla carne di pollo e 1800\%\endnote{\raggedright\url{https://faunalytics.org/alternative-protein-production-counting-the-calories/}} in più rispetto alla carne bovina.
+La produzione di carne è anche il principale fattore della deforestazione, sia per far pascolare il bestiame sia per creare coltivazioni per sfamarlo.
+
+Il grafico ci mostra le emissioni di $CO_2$ per grammo di proteine. Osserviamo che la produzione di un grammo di carne bovina è responsabile di più $CO_2$ rispetto a grano, mais e legumi. Una porzione da circa 200g di carne bovina equivalgono a ~4–6kg $CO_2$-eq, corrispondenti a un’automobile media per 20km.
+
+Quindi è meglio diventare vegani, vegetariani o rimanere onnivori dal punto di vista ambientale?
+
+Una ricerca\endnote{\raggedright\url{https://now.tufts.edu/news-releases/us-land-capacity-feeding-people-could-expand-dietary-changes}} pubblicata su Elementa, ha analizzato dieci diverse diete per stabilire quale di queste permetterebbe di sfamare più persone. La dieta peggiore è risultata quella americana ricca di carne, grassi e dolcificanti, la migliore è stata quella vegetariana e non vegana. La motivazione è che i terreni adibiti all'allevamento, se gestiti in modo non sostenibile, possono degradarsi e perdere fertilità nel tempo, rendendo difficile o impossibile la coltivazione successiva di ortaggi o piante da frutto senza interventi significativi di ripristino.
+
+Inoltre alcuni studi epidemiologici stimano che una parte delle morti per tumori o malattie cardiovascolari sono attribuibili all’eccessivo consumo di carne rossa, aumentando anche i costi sanitari.
+Anche nuove alternative, come la carne coltivata in laboratorio o i grilli, per quanto siano promettenti, ad oggi hanno un efficienza non troppo differente da quella del pollo.
+
+Le diete più sane, sono anche quelle con un minore impatto ambientale, come suggerito dalla piramide alimentare in cui troviamo molta frutta e verdura e, limita cibi elaborati, carne rossa, insaccati e salumi, dichiarati cancerogeni dall'OMS\endnote{\raggedright\url{http://www.thelancet.com/journals/lanonc/article/PIIS1470-2045\%2815\%2900444-1/fulltext}}. Secondo uno studio dell'Università del Michigan, si è stimato che il consumo di un solo hot dog potrebbe essere associato a una perdita di circa 36 minuti di vita in salute.
+
+L'attuale eccesso di cibi processati, di igiene, farmaci e antibiotici, assunti direttamente, o indirettamente tramite una dieta di carne, possono contribuire a danneggiare il microbiota, che sembra essere la causa della grande diffusione di allergie degli ultimi decenni. Il nostro sistema immunitario diventa efficiente se fin dalla nascita viene a contatto con una quantità sufficiente di germi e parassiti. 
 
 \definecolor{colorPerKg}{RGB}{215, 48, 39}    
 \definecolor{colorPerProt}{RGB}{252, 141, 89} 
@@ -3629,35 +3630,8 @@ Per la pulizia della casa meglio preferire detergenti ecologici anche per la sal
 \raggedright\url{https://www.un.org/en/climatechange/science/climate-issues/food}}
 \end{figure}
 
-Cosa centra la dieta con l'ecologia? L'atto in sé di mangiare non inquina, ma il modo in cui vengono prodotti gli alimenti potrebbe. Come possiamo osservare dalla tabella a fianco sull'impronta idrica, la carne, soprattutto quella di bovino, copre le prime posizioni. Gli animali possiamo vederli come dei sistemi, di solito più sono grossi e meno sono efficienti. Per allevare gli animali serve cibo che prendiamo dai campi. Immaginate quanti chili di cibo mangia una mucca prima di essere macellata e quanti litri d'acqua beve. La produzione di 1kg di carne di manzo necessita di circa 15500 litri. Ora immaginate di essere in una stanza e di avere da una parte una mucca macellata e, dall'altra parte tutto quello che il bovino ha mangiato e bevuto durante la sua vita.
-Se si dovesse scegliere tra consumare la carne della mucca o le risorse vegetali che essa ha impiegato per crescere, per l'efficienza energetica quest'ultime potrebbero sostenere un maggior numero di individui.
-
-Quando una mucca mangia, convertirà una piccola parte di quel cibo in carne (3-5\%) e, il resto viene trasformato in peli, corna, ossa, zoccoli, sangue, gas, calore, movimento ecc…
-
-Attualmente il 12-18\% delle emissioni di gas serra provengono da allevamenti animali\endnote{\raggedright\url{https://it.wikipedia.org/wiki/Impatto\_ambientale\_dell\%27industria\_dei\_cibi\_animali}}.
-
-Se le colture che producono cibo per gli allevamenti venissero coltivate a soia per gli umani produrremmo il 314\%\endnote{\raggedright\url{https://humaneherald.org/wp-content/uploads/2019/05/calories-and-protein-produced-per-acre-1.pdf}} di proteine in più rispetto alla carne di pollo e 1800\%\endnote{\raggedright\url{https://faunalytics.org/alternative-protein-production-counting-the-calories/}} in più rispetto alla carne bovina.
-La produzione di carne è anche il principale fattore della deforestazione, sia per far pascolare il bestiame sia per creare coltivazioni per sfamarlo.
-
-Di seguito un grafico che mostra le emissioni di $CO_2$ per grammo di proteine. Vediamo Quindi come un grammo di carne bovina emetta molta più $CO_2$ rispetto a grano, mais e legumi. 
-
-Fagioli, verdure e, alcuni pesci allevati in modo sostenibile, hanno un rapporto vantaggioso tra salute e costi ambientali. Sono in pari invece alimenti come latte, yogurt, uova, e le verdure coltivate in serra. Mentre svantaggiosi gli alimenti come carne di manzo, carni lavorate, maiale e agnello, che hanno mostrato elevati costi sanitari e ambientali. Una porzione da circa 200g di carne bovina equivalgono a ~4–6kg $CO_2$-eq, corrispondenti a un’automobile media per 20km!
-
-Quindi è meglio diventare vegani, vegetariani o rimanere onnivori dal punto di vista ambientale?
-
-Una ricerca\endnote{\raggedright\url{https://now.tufts.edu/news-releases/us-land-capacity-feeding-people-could-expand-dietary-changes}
-} pubblicata su Elementa, ha analizzato dieci diverse diete per stabilire quale di queste permetterebbe di sfamare più persone. La dieta peggiore è risultata quella americana ricca di carne, grassi e dolcificanti, la migliore è stata quella vegetariana e non vegana. La motivazione è che i terreni adibiti all'allevamento, se gestiti in modo non sostenibile, possono degradarsi e perdere fertilità nel tempo, rendendo difficile o impossibile la coltivazione successiva di ortaggi o piante da frutto senza interventi significativi di ripristino.
-
-Inoltre alcuni studi epidemiologici stimano che una parte delle morti per tumori o malattie cardiovascolari sono attribuibili all’eccessivo consumo di carne rossa, aumentando anche i costi sanitari.
-Anche nuove alternative, come la carne coltivata in laboratorio o i grilli, per quanto siano promettenti, ad oggi hanno un efficienza non troppo differente da quella del pollo.
-
-Le diete più sane, inoltre, sono anche quelle che hanno un minore impatto ambientale. Come possiamo osservare nella piramide alimentare c'è molta frutta e verdura, e limita cibi elaborati, carne rossa, insaccati e salumi, dichiarati cancerogeni dall'OMS\endnote{\raggedright\url{http://www.thelancet.com/journals/lanonc/article/PIIS1470-2045\%2815\%2900444-1/fulltext}}. Secondo uno studio dell'Università del Michigan, attraverso modelli di valutazione dell'impatto sulla salute, si è stimato che il consumo di un solo hot dog potrebbe essere associato a una perdita di circa 36 minuti di vita in salute.
-L'attuale eccesso di cibi processati, di igiene, farmaci e antibiotici, assunti direttamente, o indirettamente tramite una dieta di carne, possono contrinuire a danneggiare il microbiota, che sembra essere la causa della grande diffusione di allergie degli ultimi decenni. Il nostro sistema immunitario diventa efficiente se fin dalla nascita viene a contatto con una quantità sufficiente di germi e parassiti. 
-
 \needspace{4cm}
-Di seguito possiamo vedere quanto viene consumato un certo alimento nelle varie aree del mondo e quanto invece andrebbe
-consumato (dieta di riferimento) rappresentato dalla linea
-tratteggiata\endnote{\raggedright\url{https://www.semanticscholar.org/paper/Faculty-Opinions-recommendation-of-Food-in-the-the-Symonds/8826b114812333f7b154b6d8a1886a66ed09da31\#paper-header}}. La carne rossa nel nord America supera il 600\% del consumo consigliato.
+Di seguito possiamo vedere quanto viene consumato un certo alimento nelle varie aree del mondo e quanto invece andrebbe consumato secondo la dieta di riferimento, rappresentata dalla linea tratteggiata\endnote{\raggedright\url{https://www.semanticscholar.org/paper/Faculty-Opinions-recommendation-of-Food-in-the-the-Symonds/8826b114812333f7b154b6d8a1886a66ed09da31\#paper-header}}. La carne rossa nel nord America supera il 600\% del consumo consigliato.
 
 \begin{figure}[H]
   \begin{minipage}{17cm}
@@ -3668,10 +3642,7 @@ Nella legenda troviamo: Globale, Asia dell'est, Sud Asia, Africa subsahariana, A
   \end{minipage}
 \end{figure}
 
-Reducetarianesimo e flexitarianesimo
-
-Sono alternative al vegetarianesimo che si impegnano a ridurre il consumo di carne, i primi per l'ambiente e i secondi per la propria salute. La maggioranza delle persone che si identificano come vegetariane, spesso sono reducetariani o flexitariani, in quanto può capitare che durante l'anno consumino carne. Purtroppo, per anni, alcune forme di promozione del messaggio vegetariano e vegano hanno adottato toni giudicanti, implicando che "voi siete sbagliati e dovreste vergognarvi mentre noi siamo buoni". Questo ha contribuito a creare un certo imbarazzo o diffidenza quando qualcuno si definisce vegetariano, anche se si chiarisce che non è intenzione giudicare le scelte alimentari altrui. Con il termine reducetariano rimuoviamo questo
-linea così netta tra un gruppo e l'altro, risultando più inclusivo.
+In alternativa al vegetarianesimo troviamo il reducetarianesimo e flexitarianesimo,stili alimentari che si impegnano a ridurre il consumo di carne, i primi per l'ambiente e i secondi per la salute. La maggioranza delle persone che si identificano come vegetariane, spesso sono reducetariani o flexitariani, in quanto può capitare che durante l'anno consumino carne. Purtroppo, per anni, alcune forme di promozione del messaggio vegetariano e vegano hanno adottato toni giudicanti, che hanno allontanato le persone. Questo ha contribuito a creare un certo imbarazzo o diffidenza quando qualcuno si definisce vegetariano, anche se si chiarisce che non è intenzione giudicare le scelte alimentari altrui. Con il termine reducetariano si rimuove questa linea così netta tra un gruppo e l'altro, risultando più inclusivo.
 
 \subsection{Sicurezza}
 Come possono convivere individui con idee in conflitto?
@@ -3700,20 +3671,13 @@ Oltre a non danneggiare gli altri, possiamo contribuire alla collettività. In u
 
 In Italia abbiamo una delle pressioni fiscali più alte, ma abbiamo il secondo sistema sanitario migliore al mondo e in generale un buon welfare\endnote{\raggedright\url{https://en.wikipedia.org/wiki/List\_of\_countries\_by\_social\_welfare\_spending}}, ammortizzatori sociali, malattia, maternità, ferie ecc… Questi aspetti positivi, non vogliono negare i problemi del nostro stato, infatti l'Italia ha una pressione fiscale elevata, anche perché è tra i paesi che evadono di più il fisco, ha tra i più bassi livelli di occupazione, bassa produttività e, bassa natalità e di conseguenza di contribuenti.
 
-
-
-Anni fa, scaricando i dati di sugli indici di pace, clima, potere d'acquisto, welfare, sistema sanitario, istruzione, morti per abuso di sostanze, salute mentale e suicidi, ho creato una pagina web\endnote{\raggedright\url{https://iacoposk8.github.io/projects/best-country/}} dove poter assegnare un importanza da 1 a 100 a questi fattori per generare una classifica dei paesi più adatti a noi. Lasciando tutto a 100 l'Italia è in seconda posizione sotto la Danimarca.
-
+Per comprendere come muoverci è possibile utilizzare la storia, anche se credo sia molto difficile, poiché richiede una notevole capacità di astrazione. Ad esempio, confrontare il riarmo che precedette la Prima Guerra Mondiale con il riarmo attuale è problematico: all’epoca, gli Stati europei si osservavano con sospetto reciproco, e ogni incremento militare generava timore nei vicini. Inoltre, non esisteva ancora la deterrenza nucleare. Per questo, anche se le dinamiche possono sembrare simili, il contesto storico è così diverso da rendere difficile una lettura delle due situazioni. 
 
 
 
 
 
 
-
-
-
-Premetto dicendo che l'utilizzare la storia come filtro per interpretare il presente, secondo me, può essere fuorviante, poiché richiede una notevole capacità di astrazione. Ad esempio, confrontare il riarmo che precedette la Prima Guerra Mondiale con il riarmo attuale è problematico: all’epoca, gli Stati europei si osservavano con sospetto reciproco, e ogni incremento militare generava timore nei vicini. Inoltre, non esisteva ancora la deterrenza nucleare. Per questo, anche se le dinamiche possono sembrare simili, il contesto storico è così diverso da rendere difficile una lettura delle due situazioni. 
 
 Può succedere che le persone, come singoli individui o come gruppo di una società, nel cercare
 di risolvere un problema, causato da una catena di avvenimenti, guardino solo l'ultimo anello
